# cleaner

./: .env.example  .gitignore  Dockerfile  IDE_AI_CREATE_NAS_CLEANER_APP_2026-06-20.md  README.md  START_HERE.md  docker-compose.nas.yml  pyproject.toml
cleaner/: __init__.py  classifier.py  cli.py  config.py  evidence.py  executor.py  models.py  planner.py  reports.py  scanner.py  server.py
cleaner/web/: app.js  index.html  styles.css
docs/: ARCHITECTURE.md  ARCHIVE_ASSISTANT_EVIDENCE.md  CHANGELOG.md  LOCAL_DEVELOPMENT.md  NAS_DEPLOYMENT.md  OPERATIONS.md  SAFETY_CONTRACT.md  TESTING.md
scripts/: create_sample_cleanup_tree.py  run_once.py
tests/: conftest.py  test_destination_missing_blocks_cleanup.py  test_empty_folder_detection.py  test_incoming_is_never_touched.py  test_missing_evidence_blocks_cleanup.py  test_no_delete_by_default.py  test_quarantine_is_never_deleted.py  test_report_written.py  test_uncertain_leftovers_go_to_review_plan.py  test_weekly_age_gate.py
